[package]
name = "mem_println"
version = "0.1.0"
edition = "2021"
authors = ["temindarov.e.i.20@gmail.com <https://github.com/emirtemindarov>"]
rust-version = "1.60.0"
homepage = "https://docs.rs/mem_println/0.1.0/mem_println/"
description = "Shortcut for printing size of value in bytes"
repository = "https://github.com/emirtemindarov/mem.git"
license = "MIT OR Apache-2.0"
keywords = ["macro", "lib", "memory"]
categories = ["development-tools::debugging", "development-tools::profiling", "development-tools::testing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["println_mem"]
println_mem = []
# get_size_of_val = []